--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@prisma/client": "^6.7.0",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "next-auth": "^5.0.0-beta.27",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
