--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.27",
